--- a/.github/workflows/cronjob.yml
+++ b/.github/workflows/cronjob.yml
@@ -10,8 +10,7 @@ on:
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
-    env:
-      CYPRESS_SLACK_WEBHOOK_URL: ${{ secrets.CYPRESS_SLACK_WEBHOOK_URL }}
+    container: cypress/browsers:node12.13.0-chrome78-ff70
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -20,3 +19,17 @@ jobs:
         uses: cypress-io/github-action@v2
         with:
           browser: chrome
+        env:
+          CYPRESS_SLACK_WEBHOOK_URL: ${{ secrets.CYPRESS_SLACK_WEBHOOK_URL }}
+
+      - uses: actions/upload-artifact@v1
+        if: failure()
+        with:
+          name: cypress-screenshots
+          path: cypress/screenshots
+      # Test run video was always captured, so this action uses "always()" condition
+      - uses: actions/upload-artifact@v1
+        if: always()
+        with:
+          name: cypress-videos
+          path: cypress/videos
