--- a/.github/workflows/cronjob.yml
+++ b/.github/workflows/cronjob.yml
@@ -14,6 +14,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Test curl
+        run: curl https://www.naver.com/
+
+      - name: Test curl
+        run: curl http://www.jirye.com/Book/booklist.php?
+
       - name: Cypress run
         uses: cypress-io/github-action@v2
         with:
