--- a/.github/workflows/cronjob.yml
+++ b/.github/workflows/cronjob.yml
@@ -1,9 +1,9 @@
 name: Check Jirye Empty Room
 
-on:
-  push:
-    branches:
-      - master
+# on:
+#   push:
+#     branches:
+#       - master
   # schedule:
   #   - cron: '0 5 * * 1-5'
 
